--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
       <!-- to here  -->
       <div class="about">
         <div class="bio-left">
+          <h2>Sean Aubin</h2>
+          <img src="https://s3.amazonaws.com/static.mlh.io/brand-assets/logos/png/mlh-localhost-logo-dark.png" />
+        </div>
+        <div class="bio-right">
+          <p> He's a pretty cool person. </p>
+        </div>
+      </div>
+      <div class="about">
+        <div class="bio-left">
           <h2>Jamie Wittenberg</h2>
           <img src="https://cdn.glitch.com/00c06d6f-7133-4af5-a6b1-8d1b754d7919%2FIMG_1545.JPG?1526330516520" />
         </div>
