--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img src="https://s3.amazonaws.com/static.mlh.io/brand-assets/logos/png/mlh-localhost-logo-dark.png" />
         </div>
         <div class="bio-right">
-          <p> She's a smart person.</p>
+          <p> She's a VERY smart person.</p>
         </div>
       </div>
       <div class="about">
