--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
       <!-- to here  -->
       <div class="about">
         <div class="bio-left">
+          <h2>Sean Aubin</h2>
+          <img src="https://s3.amazonaws.com/static.mlh.io/brand-assets/logos/png/mlh-localhost-logo-dark.png" />
+        </div>
+        <div class="bio-right">
+          <p> He's cool.</p>
+        </div>
+      </div>
+      <div class="about">
+        <div class="bio-left">
           <h2>Jasmine Ren</h2>
           <img src="https://s3.amazonaws.com/static.mlh.io/brand-assets/logos/png/mlh-localhost-logo-dark.png" />
         </div>
